# airflow

./: .env template  .gitignore  Dockerfile  README.md  development.env template  docker-compose.yaml  pull_request_template.md  pyproject.toml
dags/: .airflowignore  beccar_test_dag.py
dags/email_monitoring/: email_handler_dag.py  lifecycle_handler_dag.py  subscription_creation_dag.py  subscription_deletion_dag.py  test_cytora_auth_dag.py  test_dev_mailbox.msg
dags/utilities/: blob_storage_helper.py  constants.py  cytora_helper.py  database_helper.py  email_attachments_helper.py  email_subscription_helper.py  file_attachments_helper.py  msgraph_helper.py  open_ai_helper.py  sharepoint_helper.py  utility_helper.py  utils.py
dags/utilities/cytora_helper/: client.py  output_extractors.py  parsers.py  validation.py
deployment/: azure-pipeline.yml  custom-values-template.yaml  custom-values.yaml  requirements.txt
deployment/templates/: build-docker-image.yml  helm-chart-token-replacement.yml  helm-upgrade.yml
plugins/: __init__.py
plugins/email_monitoring/: cytora_api_status_sensor_operator.py  cytora_api_status_trigger.py
plugins/helpers/: cytora_helper.py  cytora_mappings.py  utils.py
